--- a/circlefe/package.json
+++ b/circlefe/package.json
@@ -16,12 +16,14 @@
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.5.4",
+    "overlayscrollbars-react": "^0.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "simplebar": "^6.2.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
