--- a/circlefe/package.json
+++ b/circlefe/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.5.6",
     "js-cookie": "^3.0.5",
     "overlayscrollbars-react": "^0.5.6",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
