--- a/circlebe/package.json
+++ b/circlebe/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "g": "^2.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -29,7 +31,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.5.5",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.7.3",
     "@types/swagger-ui-express": "^4.1.6",
     "prisma": "^5.19.1",
     "swagger-autogen": "^2.23.7",
