--- a/circlebe/vercel.json
+++ b/circlebe/vercel.json
@@ -9,8 +9,7 @@
   ],
   "routes": [
       {
-          "src": "/(.*)",
-          "dest": "src/index.ts"
+        "source": "/(.*)", "destination": "/" 
       }
   ]
 }
