--- a/circlebe/vercel.json
+++ b/circlebe/vercel.json
@@ -9,7 +9,8 @@
   ],
   "routes": [
       {
-        "source": "/(.*)", "destination": "/" 
+          "src": "/(.*)",
+          "dest": "src/index.ts"
       }
   ]
 }
