--- a/circlebe/package.json
+++ b/circlebe/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "prisma generate && npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "swagger": "node ./swagger/swagger.js",
